docs: inital PRD

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ logs
 .aider*
 !.aider.conf.yml
 
+mcp.json
+
 package-lock.json
 
 hello.js
@@ -35,3 +37,24 @@ specs/
 **/.claude/settings.local.json
 
 output/
+
+# Added by Claude Task Master
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+# Editor directories and files
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+# Task files
+tasks.json
+tasks/ 
+!tasks.md
